objects/invoice__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>invoices</relationshipLabel>
        <relationshipName>invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closure_date__c</fullName>
        <label>Closure_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amount__c</fullName>
        <label>amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ans__c</fullName>
        <formula>amount__c  -  Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ans</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoice_date__c</fullName>
        <label>invoice date</label>
        <type>Date</type>
    </fields>
    <label>invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>